2009-12-10  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.Moonlight.csproj:
	* MonoDevelop.Moonlight/MoonlightFrameworkBackend.cs:
	* MonoDevelop.Moonlight/SilverlightFrameworkBackend.cs:
	  Renamed file. Remove MONO_PATH in the tools env vars if the
	  base runtime sets it.

2009-12-10  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/SilverlightFrameworkBackend.cs: Fix
	  enumertion properly.

2009-12-10  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/SilverlightFrameworkBackend.cs: Fix
	  redist package enumeration.

	* MonoDevelop.Moonlight/MoonlightProject.cs: Try 3.0 first,
	  fall back to 2.0.

2009-12-10  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.Moonlight.csproj:
	* MonoDevelop.Moonlight.addin.xml:
	* MonoDevelop.Moonlight/MoonlightProject.cs:
	* MonoDevelop.Moonlight/framework_SL_2_0.xml:
	* MonoDevelop.Moonlight/framework_SL_3_0.xml:
	* MonoDevelop.Moonlight/framework_Silverlight.xml:
	* MonoDevelop.Moonlight/MoonlightBuildExtension.cs:
	* MonoDevelop.Moonlight/SilverlightFrameworkBackend.cs: Track
	  the new moonlight dev bits layout. Add preliminary support
	  for multi-targetting SL2 and SL3.

2009-12-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightExecutionHandler.cs: Track
	  BrowserLauncher API.

2009-12-01  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Moonlight/MoonlightProject.cs:
	* MonoDevelop.Moonlight/MoonlightBuildExtension.cs: Introduced
	  the ConfigurationSelector class to all methods that
	  previously took a configuration name as string. This
	  eliminates the ambiguity between solution configuration
	  names and project configuration names.

2009-11-20  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightProject.cs: Track API. Set
	  UserAssemblyPaths. Get correct configuration.

	* MonoDevelop.Moonlight/MoonlightExecutionCommand.cs: Add